# SwarmIQ

./: .env.example  README.md  docker-compose.yml  package-lock.json  package.json
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  dependencies.py  graph.py  report.py  simulation.py
backend/app/db/: __init__.py  snapshot_store.py
backend/app/graphrag/: __init__.py  entity_extractor.py  world_builder.py
backend/app/ingestion/: __init__.py  document_processor.py
backend/app/llm/: __init__.py  gemini_client.py  llm_router.py  ollama_client.py
backend/app/memory/: __init__.py  chroma_memory.py  memory_manager.py
backend/app/simulation/: __init__.py  agent.py  analytics.py  branch_manager.py  confidence.py  engine.py  prompts.py  world.py
backend/app/utils/: logger.py
frontend/: index.html  vite.config.js
frontend/src/: App.vue
frontend/src/api/: graph.js  index.js  report.js  simulation.js
frontend/src/components/: GraphPanel.vue  HistoryDatabase.vue  Step1GraphBuild.vue  Step2EnvSetup.vue  Step3Simulation.vue  Step4Report.vue  Step5Interaction.vue
frontend/src/views/: Home.vue  InteractionView.vue  MainView.vue  ReportView.vue  SimulationRunView.vue  SimulationView.vue
test_scenarios/: corporate_product.txt  town_policy.txt  university_event.txt
